--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,93 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #0f0f0f;
+  color: #fff;
+}
+
+.logo-text {
+  font-family: "Bebas Neue", Roboto, sans-serif;
+}
+
+.btn-primary {
+  background: linear-gradient(90deg, #D75274, #ff2d62);
+  border-radius: 50px;
+  padding: 10px 30px;
+  color: #fff;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
+.category-tab {
+  position: fixed;
+  top: 48px;
+  width: 100%;
+  -webkit-transition: -webkit-transform 225ms cubic-bezier(0,0,.2,1);
+  transition: -webkit-transform 225ms cubic-bezier(0,0,.2,1);
+  transition: transform 225ms cubic-bezier(0,0,.2,1);
+  transition: transform 225ms cubic-bezier(0,0,.2,1),-webkit-transform 225ms cubic-bezier(0,0,.2,1);
+  -webkit-transition-property: all;
+  transition-property: all;
+  left: 0;
+  right: 0;
+  z-index: 3;
+  width: 100%;
+  white-space: nowrap;
+  word-wrap: break-word;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  padding-left: 8px;
+  background-color: #0f0f0f;
+  border-bottom: 1px solid rgba(255,255,255,0.2);
+  border-top: 1px solid rgba(255,255,255,0.2);
+  overflow-y: none;
+  overflow-x: auto;
+}
+
+.category-tab__item {
+  background-color: rgba(255,255,255,0.1);
+  color: #f1f1f1;
+  -webkit-transition: background-color .5s cubic-bezier(.05,0,0,1);
+  transition: background-color .5s cubic-bezier(.05,0,0,1);
+  height: 32px;
+  text-align: center;
+  padding: 0 12px;
+  margin-right: 8px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  box-sizing: border-box;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  border-radius: 8px;
+  border: 0;
+  cursor: pointer;
+}
+
+.category-tab-text {
+  max-width: 20rem;
+  white-space: nowrap;
+  font-family: Roboto, Arial, sans-serif;
+  line-height: 2rem;
+  font-weight: 500;
 }
