--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,11 @@ body {
   font-size: 1.2rem;
 }
 
+.nav {
+  background-color: #0f0f0f;
+  z-index: 3;
+}
+
 .category-tab {
   position: fixed;
   top: 48px;
