--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,10 @@ body {
   color: #fff;
 }
 
+.bg-primary {
+  background-color: #0f0f0f;
+}
+
 .logo-text {
   font-family: "Bebas Neue", Roboto, sans-serif;
 }
