create search function

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,10 @@ body {
   font-family: "Bebas Neue", Roboto, sans-serif;
 }
 
+input {
+  color: #000;
+}
+
 .btn-primary {
   background: linear-gradient(90deg, #D75274, #ff2d62);
   border-radius: 50px;
@@ -104,4 +108,8 @@ body {
   font-family: Roboto, Arial, sans-serif;
   line-height: 2rem;
   font-weight: 500;
+}
+
+.price {
+  /* font-size: 9px; */
 }
