--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,11 +97,12 @@ body {
 .wrapper {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
 }
 
 .cta {
     display: flex;
+    align-items: center;
     padding: 8px 35px;
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
