--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -220,7 +220,7 @@ path.two {
   background-color: #0f0f0f;
   border-bottom: 1px solid rgba(255,255,255,0.2);
   border-top: 1px solid rgba(255,255,255,0.2);
-  overflow-y: none;
+  overflow-y: hidden;
   overflow-x: auto;
 }
 
