--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,14 +113,39 @@ body {
   font-family: "Bebas Neue", Roboto, sans-serif;
 }
 
-.btn-primary {
-  background: linear-gradient(90deg, #D75274, #ff2d62);
-  border-radius: 50px;
-  padding: 10px 30px;
-  color: #fff;
+.btn-hover {
+  width: 200px;
+  font-size: 16px;
   font-weight: 600;
-  font-size: 1.2rem;
-  transition: all 0.3s ease-in-out;
+  color: #fff;
+  cursor: pointer;
+  margin: 20px;
+  height: 55px;
+  text-align:center;
+  border: none;
+  background-size: 300% 100%;
+
+  border-radius: 50px;
+  moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+.btn-hover:hover {
+  background-position: 100% 0;
+  moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+.btn-hover:focus {
+  outline: none;
+}
+
+.btn-hover.btn-color {
+  background-image: linear-gradient(to right, #eb3941, #f15e64, #e14e53, #e2373f);  box-shadow: 0 5px 15px rgba(242, 97, 103, .4);
 }
 
 .wrapper {
@@ -137,7 +162,7 @@ body {
     font-family: 'Poppins', sans-serif;
     font-size: 1.5rem;
     color: white;
-    background: linear-gradient(90deg, #8b1734, #b14862);
+    background: linear-gradient(90deg, #b14862, orange);
     transition: 1s;
     box-shadow: 6px 6px 0 black;
     transform: skewX(-15deg);
@@ -149,7 +174,7 @@ body {
 
 .cta:hover {
     transition: 0.5s;
-    box-shadow: 10px 10px 0 #FBC638;
+    box-shadow: 10px 10px 0 white;
 }
 
 .cta span:nth-child(2) {
@@ -220,10 +245,6 @@ path.two {
 
 .btn-hover:hover {
   opacity: 1;
-}
-
-.nav {
-  z-index: 3;
 }
 
 .category-tab {
