--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -328,7 +328,7 @@ path.two {
   position: fixed;
   opacity: 0;
   transform: scale(0);
-  padding: 0;
+  padding: 0 2.5%;
   top: 0;
   bottom: 0;
   left: 0;
@@ -346,7 +346,7 @@ path.two {
   transition: all 0.2s ease-in-out;
   transform: scale(0);
   opacity: 0;
-  width: 98%;
+  width: 95%;
   background: whitesmoke;
   color: black;
   border-radius: 10px;
