--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -136,19 +136,6 @@ input[type="search"]:focus::-webkit-search-cancel-button {
   }
 }
 
-body {
-  background-color: #0f0f0f;
-  color: #fff;
-}
-
-.bg-primary {
-  background-color: #0f0f0f;
-}
-
-.logo-text {
-  font-family: "Bebas Neue", Roboto, sans-serif;
-}
-
 .btn-hover {
   width: 200px;
   font-size: 16px;
@@ -211,76 +198,6 @@ body {
   transform: skewX(-15deg);
 }
 
-.cta:focus {
-  outline: none;
-}
-
-.cta:hover {
-  transition: 0.5s;
-  box-shadow: 10px 10px 0 white;
-}
-
-.cta span:nth-child(2) {
-  transition: 0.5s;
-  margin-right: 0px;
-}
-
-.cta:hover span:nth-child(2) {
-  transition: 0.5s;
-  margin-right: 45px;
-}
-
-span {
-  transform: skewX(15deg);
-}
-
-span:nth-child(2) {
-  width: 20px;
-  margin-left: 30px;
-  position: relative;
-  /* top: 12%; */
-}
-
-/**************SVG****************/
-
-path.one {
-  transition: 0.4s;
-  transform: translateX(-60%);
-}
-
-path.two {
-  transition: 0.5s;
-  transform: translateX(-30%);
-}
-
-.cta:hover path.three {
-  animation: color_anim 1s infinite 0.2s;
-}
-
-.cta:hover path.one {
-  transform: translateX(0%);
-  animation: color_anim 1s infinite 0.6s;
-}
-
-.cta:hover path.two {
-  transform: translateX(0%);
-  animation: color_anim 1s infinite 0.4s;
-}
-
-/* SVG animations */
-
-@keyframes color_anim {
-  0% {
-    fill: white;
-  }
-  50% {
-    fill: #fbc638;
-  }
-  100% {
-    fill: white;
-  }
-}
-
 .btn-hover {
   opacity: 0.9;
   transition: all 0.3s ease-in-out;
@@ -292,7 +209,7 @@ path.two {
 
 .category-tab {
   position: fixed;
-  top: 48px;
+  top: 68px;
   width: 100%;
   -webkit-transition: -webkit-transform 225ms cubic-bezier(0, 0, 0.2, 1);
   transition: -webkit-transform 225ms cubic-bezier(0, 0, 0.2, 1);
@@ -311,9 +228,7 @@ path.two {
   display: flex;
   align-items: center;
   padding-left: 8px;
-  background-color: #0f0f0f;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1px solid #1e2938;
   overflow-y: hidden;
   overflow-x: auto;
 }
@@ -382,8 +297,7 @@ path.two {
   transform: scale(0);
   opacity: 0;
   width: 95%;
-  background: whitesmoke;
-  color: black;
+  backdrop-filter: blur(30px);
   border-radius: 10px;
   justify-content: center;
   align-items: center;
